--- a/app/src/main/res/layout/product_card.xml
+++ b/app/src/main/res/layout/product_card.xml
@@ -39,7 +39,7 @@
                 android:adjustViewBounds="false" />
 
             <TextView
-                android:layout_width="257dp"
+                android:layout_width="237dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Large Text"
@@ -49,14 +49,24 @@
                 android:layout_marginStart="10dp"
                 android:clickable="false"
                 android:contextClickable="false" />
+
         </LinearLayout>
 
-        <ImageView
-            android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="20dp"
             android:layout_height="wrap_content"
-            android:id="@+id/imageView2"
-            android:src="@drawable/image0"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/preu"
+            android:layout_gravity="left"
+            android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true" />
+
+        <ImageView
+            android:layout_width="200px"
+            android:layout_height="200px"
+            android:id="@+id/type"
+            android:layout_alignParentRight="true"
+            android:background="#55676767" />
 
     </RelativeLayout>
     </android.support.v7.widget.CardView>
