--- a/app/src/main/res/layout/activity_view_advert.xml
+++ b/app/src/main/res/layout/activity_view_advert.xml
@@ -60,9 +60,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_alignParentStart="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginTop="@dimen/interlineat"
-                    android:layout_marginBottom="@dimen/interlineat" >
+                    android:layout_alignParentEnd="true" >
 
                 </android.support.v4.view.ViewPager>
 
@@ -71,7 +69,8 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/advert_image_type"
                     android:layout_alignParentLeft="true"
-                    android:layout_alignParentBottom="true" />
+                    android:layout_alignParentBottom="true"
+                    android:background="#55676767" />
 
                 <Button
                     android:layout_width="wrap_content"
@@ -79,7 +78,8 @@
                     android:text="Fav"
                     android:id="@+id/advert_but_favourites"
                     android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true" />
+                    android:layout_alignParentRight="true"
+                    android:background="#55676767" />
 
                 <Button
                     android:layout_width="wrap_content"
@@ -87,7 +87,8 @@
                     android:text="Chat"
                     android:id="@+id/advert_but_chat"
                     android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true" />
+                    android:layout_alignParentTop="true"
+                    android:background="#55676767" />
 
             </RelativeLayout>
 
@@ -148,7 +149,8 @@
                         android:text="Nom User"
                         android:id="@+id/advert_name_user"
                         android:layout_marginTop="@dimen/interlineat"
-                        android:layout_marginBottom="@dimen/interlineat" />
+                        android:layout_marginBottom="@dimen/interlineat"
+                        android:layout_gravity="center" />
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -156,7 +158,8 @@
                         android:id="@+id/advert_user_image"
                         android:src="@drawable/image_placeholder"
                         android:layout_marginTop="@dimen/interlineat"
-                        android:layout_marginBottom="@dimen/interlineat"/>
+                        android:layout_marginBottom="@dimen/interlineat"
+                        android:layout_gravity="center" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -165,7 +168,8 @@
                         android:text="Valoració"
                         android:id="@+id/advert_valoration"
                         android:layout_marginTop="@dimen/interlineat"
-                        android:layout_marginBottom="@dimen/interlineat"/>
+                        android:layout_marginBottom="@dimen/interlineat"
+                        android:layout_gravity="center" />
 
                     <Button
                         android:layout_width="wrap_content"
@@ -176,7 +180,8 @@
                         android:layout_centerHorizontal="true"
                         android:onClick="startMainChatActivity"
                         android:layout_marginTop="@dimen/interlineat"
-                        android:layout_marginBottom="@dimen/interlineat" />
+                        android:layout_marginBottom="@dimen/interlineat"
+                        android:layout_gravity="center" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
