--- a/app/src/main/res/layout/product_card.xml
+++ b/app/src/main/res/layout/product_card.xml
@@ -63,11 +63,10 @@
             android:paddingLeft="5dp" />
 
         <ImageView
-            android:layout_width="180px"
-            android:layout_height="180px"
+            android:layout_width="171px"
+            android:layout_height="161px"
             android:id="@+id/type"
-            android:layout_alignParentRight="true"
-            android:background="#55676767" />
+            android:layout_alignParentRight="true" />
 
     </RelativeLayout>
     </android.support.v7.widget.CardView>
