--- a/app/src/main/res/layout/activity_my_adverts.xml
+++ b/app/src/main/res/layout/activity_my_adverts.xml
@@ -18,10 +18,9 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" >
-
             </android.support.v7.widget.Toolbar>
-
     </android.support.design.widget.AppBarLayout>
+
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -34,6 +33,12 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context=".AdCards.Home"
         tools:showIn="@layout/nav_activity_main">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:id="@+id/text_loading" />
 
     </RelativeLayout>
 
