--- a/app/src/main/res/layout/activity_single_chat.xml
+++ b/app/src/main/res/layout/activity_single_chat.xml
@@ -21,25 +21,33 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:weightSum="3"
-            android:background="#ffffff">
+            android:weightSum="10"
+            android:background="#ffffff"
+            android:layout_margin="5dp"
+            android:gravity="center_vertical|center_horizontal">
 
             <EditText
                 android:id="@+id/msg"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:layout_weight="2"
                 android:hint="@string/hint_single_chat"
                 android:background="#ffffff"
                 android:paddingLeft="5dp"
-                android:paddingRight="5dp" />
+                android:paddingRight="5dp"
+                android:layout_weight="9"
+                android:layout_marginRight="10dp"
+                android:layout_gravity="center"
+                android:layout_margin="5dp" />
 
-            <Button
+            <ImageButton
                 android:id="@+id/send"
-                android:layout_width="0dp"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:text="@string/send_message" />
+                android:layout_width="43dp"
+                android:layout_height="match_parent"
+                android:text="@string/send_message"
+                android:src="@android:drawable/ic_menu_send"
+                android:background="@drawable/round_button"
+                android:scaleType="fitCenter"
+                android:layout_gravity="center" />
 
         </LinearLayout>
     </LinearLayout>
