--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#0073e5</color>
     <color name="colorAccent">#0073e5</color>
     <color name="back_color">#198cff</color>
-    <color name="FABcolor">#CD853F</color>
+    <color name="FABcolor">#0073e5</color>
     <color name="app_header_color">#ffffff</color>
     <color name="login_button_color">#0073e5</color>
     <color name="reg_color">#f2f2f2</color>
