--- a/app/src/main/res/layout/content_view_advert.xml
+++ b/app/src/main/res/layout/content_view_advert.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
 
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:fitsSystemWindows="true"
-
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="false"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -14,29 +14,23 @@
     android:screenOrientation="portrait"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".AdCards.Home"
-    tools:showIn="@layout/activity_pag_principal"
+
     android:id="@+id/rl">
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 
-        android:fitsSystemWindows="true"
+        android:fitsSystemWindows="false"
 
 
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context=".Advertisement.NewAdvertisement">
+        tools:context=".Advertisement.NewAdvertisement"
+        android:layout_weight="100">
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="56dp"
-            android:paddingLeft="24dp"
-            android:paddingRight="24dp"
             android:id="@+id/linearLayoutNewAdvert"
             android:focusable="true"
             android:clickable="true"
@@ -45,7 +39,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="5"
+                android:layout_weight="10"
                 android:id="@+id/relativeLayoutNewAdvert"
                 android:focusable="true"
                 android:clickable="true"
@@ -64,6 +58,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/advert_image_type"
+                    android:elevation="5dp"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentBottom="true"
                     android:background="#55676767" />
@@ -71,56 +66,54 @@
 
             </RelativeLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Title"
-                android:id="@+id/advert_title"
-                android:layout_marginTop="@dimen/interlineat"
-                android:layout_marginBottom="@dimen/interlineat"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Description"
-                android:id="@+id/advert_description"
-                android:layout_marginTop="@dimen/interlineat"
-                android:layout_marginBottom="@dimen/interlineat" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tags"
-                android:id="@+id/advert_tags"
-                android:layout_marginTop="@dimen/interlineat"
-                android:layout_marginBottom="@dimen/interlineat"/>
 
             <LinearLayout
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent"
+                android:layout_weight="100">
 
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="5">
-                    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                        android:name="com.google.android.gms.maps.MapFragment"
-                        android:id="@+id/advert_map"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="@dimen/interlineat"
-                        android:layout_marginBottom="@dimen/interlineat" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Description"
+                    android:id="@+id/advert_description"
+                    android:layout_marginTop="@dimen/interlineat"
+                    android:layout_marginBottom="@dimen/interlineat"
+                    android:textStyle="bold"
+                    android:paddingTop="10dp"
+                    android:textSize="22dp" />
 
-                </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="@string/hashtags_title"
+                    android:id="@+id/textView6"
+                    android:textStyle="normal|italic"
+                    android:textSize="19dp"
+                    android:paddingTop="2dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Tags"
+                    android:id="@+id/advert_tags"
+                    android:layout_marginTop="@dimen/interlineat"
+                    android:layout_marginBottom="@dimen/interlineat"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="100">
 
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="5">
+                    android:layout_weight="10">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -162,8 +155,22 @@
                         android:layout_marginBottom="@dimen/interlineat"
                         android:layout_gravity="center" />
                 </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5">
+                    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                        android:name="com.google.android.gms.maps.MapFragment"
+                        android:id="@+id/advert_map"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/interlineat"
+                        android:layout_marginBottom="@dimen/interlineat" />
+
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-
 </LinearLayout>
