--- a/app/src/main/res/menu/menu_view_my_adv.xml
+++ b/app/src/main/res/menu/menu_view_my_adv.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/action_edit_adv"
+    <item android:id="@+id/action_delete"
+        android:title="@string/search_preview"
+        android:icon="@android:drawable/ic_menu_delete"
         android:orderInCategory="100"
-        android:title="@string/action_edit_adv"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_delete_adv"
-        android:orderInCategory="100"
-        android:title="@string/action_delete_adv"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
