--- a/app/src/main/res/layout/content_new_advertisement.xml
+++ b/app/src/main/res/layout/content_new_advertisement.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:fitsSystemWindows="true"
 
-    android:background="#FFFFFF"
+
 
     xmlns:tools="http://schemas.android.com/tools"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -14,6 +14,7 @@
     tools:context=".Advertisement.NewAdvertisement">
 
     <LinearLayout
+        android:background="#FFFFFF"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,22 +37,34 @@
             android:clickable="true"
             android:onClick="onClick">
 
-            <Button
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="+"
-                android:id="@+id/newImage"
-                android:layout_alignParentEnd="true" />
-
-            <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/pager"
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_toStartOf="@id/newImage" >
+                android:layout_height="match_parent">
 
-            </android.support.v4.view.ViewPager>
+                <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentStart="true"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="7dp">
+
+                </android.support.v4.view.ViewPager>
+
+                <Button
+                    style="?android:attr/buttonStyleSmall"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/new_photo"
+                    android:id="@+id/newImage"
+                    android:layout_alignParentEnd="true"
+                    android:background="@color/login_button_color"
+                    android:gravity="center"
+                    android:padding="12dp"
+                    android:textColor="@color/app_header_color"
+                    android:paddingTop="5dp" />
+            </LinearLayout>
 
         </RelativeLayout>
 
