--- a/app/src/main/res/layout/dialog_rate_deal.xml
+++ b/app/src/main/res/layout/dialog_rate_deal.xml
@@ -3,12 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
-        android:text="@string/dialog_title_rate_deal"
+        android:text="@string/title_rate_deal"
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:scaleType="center"
         android:background="#FFFFBB33"
         android:textSize="30dp"
         android:gravity="center_vertical|center_horizontal" />
+
+    <RatingBar
+        android:id="@+id/ratingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:numStars="5"
+        android:stepSize="1.0"
+        android:rating="2.5"
+        android:layout_gravity="center" />
 
 </LinearLayout>
