--- a/app/src/main/res/layout/content_password_recover.xml
+++ b/app/src/main/res/layout/content_password_recover.xml
@@ -17,10 +17,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/app_header"
+            android:id="@+id/app_header_recov"
             android:layout_marginBottom="36dp"
             android:layout_gravity="center_horizontal"
-            android:text="@string/app_name"
+            android:text="@string/title_recovery"
             android:layout_marginTop="36dp"
             android:textSize="46dp"
             android:textColor="@color/app_header_color" />
@@ -31,54 +31,22 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
-            <EditText android:id="@+id/input_email"
+            <EditText android:id="@+id/input_email_recov"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/user_name"
                 android:inputType="textPersonName" />
         </android.support.design.widget.TextInputLayout>
 
-        <!-- Password Label -->
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
-            <EditText android:id="@+id/input_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:hint="@string/user_password"/>
-        </android.support.design.widget.TextInputLayout>
-
         <android.support.v7.widget.AppCompatButton
-            android:id="@+id/btn_login"
+            android:id="@+id/btn_recov"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
-            android:text="@string/login"
+            android:text="@string/recov_button"
             android:background="@color/login_button_color"
             android:textColor="@color/app_header_color" />
-
-        <TextView android:id="@+id/link_signup"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:text="@string/new_user_text"
-            android:gravity="center"
-            android:textSize="16dip"
-            android:textColor="@color/reg_color" />
-
-        <TextView android:id="@+id/link_forg"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:text="@string/new_user_text"
-            android:gravity="center"
-            android:textSize="16dip"
-            android:textColor="@color/reg_color" />
-
     </LinearLayout>
 </ScrollView>
