--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="my_chat_color">#69ff04</color>
     <color name="default_color">#ffffff</color>
     <color name="pressed_color">#04ffe2</color>
+    <color name="gossip">#ff69b4</color>
 </resources>
