--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -75,7 +75,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            android:text="@string/new_user_text"
+            android:text="@string/forg_button"
             android:gravity="center"
             android:textSize="16dip"
             android:textColor="@color/reg_color" />
