--- a/app/src/main/res/layout/content_password_recover.xml
+++ b/app/src/main/res/layout/content_password_recover.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
-            <EditText android:id="@+id/input_email_recov"
+            <EditText android:id="@+id/input_user_recov"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/user_name"
